# phaselock

./: .gitignore  README.md  dev-spec.md  impl-plan.md  index.html  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
prompts/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  mod.rs  playback.rs  scheduler.rs
src-tauri/src/commands/: helpers.rs  mod.rs  playback.rs  queue.rs  requests.rs  session.rs
src-tauri/src/logging/: logger.rs
src-tauri/src/network/: mdns.rs  messages.rs  mod.rs  tcp.rs  udp.rs
src-tauri/src/queue/: manager.rs
src-tauri/src/session/: host.rs  mod.rs  peer.rs
src-tauri/src/sync/: clock.rs
src-tauri/src/transfer/: file_cache.rs  file_transfer.rs  mod.rs  song_request.rs
src-tauri/src/youtube/: download.rs  mod.rs  queue.rs  spotify.rs
src/lib/: types.ts
src/lib/components/: CreateJam.svelte  DownloadQueue.svelte  HomeScreen.svelte  HostSession.svelte  NowPlaying.svelte  PeerList.svelte  PeerSession.svelte  Queue.svelte  SessionBrowser.svelte  SongRequests.svelte  Spinner.svelte  Toast.svelte
src/lib/stores/: discovery.ts  playback.ts  queue.ts  requests.ts  session.ts
src/styles/: global.css
