[package]
name = "phaselock"
version = "0.1.0"
description = "Synchronized music playback for groups"
authors = []
edition = "2021"

[lib]
name = "phaselock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "ogg", "vorbis"] }
mdns-sd = "0.11"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
rand = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json"], default-features = true }

[dev-dependencies]
tempfile = "3"
